--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,9 @@
 Package: NormalLaplace
-Version: 0.1-1
-Date: 2010-03-01
+Version: 0.2-0
+Date: 2011-01-10
 Title: The Normal Laplace Distribution
-Author: David Scott <d.scott@auckland.ac.nz> and Jason Shicong Fu
+Author: David Scott <d.scott@auckland.ac.nz>, Jason Shicong Fu and
+	Simon Potter
 Maintainer: David Scott <d.scott@auckland.ac.nz>
 Depends: R (>= 2.3.0), DistributionUtils, GeneralizedHyperbolic
 Encoding: latin1
@@ -13,6 +14,8 @@ Description: This package provides functions for the normal Laplace
 License: GPL (>= 2)
 Repository: R-Forge
 Repository/R-Forge/Project: rmetrics
-Repository/R-Forge/Revision: 4777
-Date/Publication: 2010-03-01 05:08:51
-Packaged: 2010-11-14 21:38:46 UTC; rforge
+Repository/R-Forge/Revision: 5031
+Date/Publication: 2011-01-11 01:02:09-03-01 05:08:51
+Repository: R-Forge
+Repository/R-Forge/Project: rmetrics
+Packaged: 2011-01-11 21:38:06 UTC; rforge
