TODO no longer necessary. NAMESPACE modified to include S3 methods on the GNL fitting object.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,3 +13,9 @@ S3method(coef,nlFit)
 S3method(vcov,nlFit)
 S3method(summary,nlFit)
 S3method(print,summary.nlFit)
+S3method(print,gnlFit)
+S3method(plot,gnlFit)
+S3method(coef,gnlFit)
+S3method(vcov,gnlFit)
+S3method(summary,gnlFit)
+S3method(print,summary.gnlFit)
